[gd_scene load_steps=4 format=3 uid="uid://7nfxprlt8bwy"]

[ext_resource type="PackedScene" uid="uid://b5h8yuc84puev" path="res://art/mob.glb" id="1_g3uug"]
[ext_resource type="Script" path="res://mob.gd" id="1_h5a08"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nr1m8"]
size = Vector3(1.4356, 1.31896, 2.33836)

[node name="Mob" type="CharacterBody3D" groups=["Enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.326772, 0)
script = ExtResource("1_h5a08")

[node name="Pivot" type="Node3D" parent="."]

[node name="mob" parent="Pivot" instance=ExtResource("1_g3uug")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_nr1m8")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[connection signal="navigation_finished" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
